@@ -6,6 +6,7 @@ import com.jardineria.model.DetallePedido;
 import com.jardineria.model.Pedido;
 import com.jardineria.repository.CarritoRepository;
 import com.jardineria.repository.PedidoRepository;
+import com.jardineria.repository.ProductoRepository;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -19,10 +20,12 @@ public class PedidoService {
 
     private final PedidoRepository pedidoRepository;
     private final CarritoRepository carritoRepository;
+    private final ProductoRepository productoRepository;
 
     @Transactional
     public Pedido finalizarPedido(Long usuarioId) {
-        // Obtener el carrito del usuario
+
+        // 1️⃣ Obtener carrito
         Carrito carrito = carritoRepository.findByUsuarioId(usuarioId)
                 .orElseThrow(() -> new RuntimeException("Carrito no encontrado"));
 
@@ -30,29 +33,43 @@ public class PedidoService {
             throw new RuntimeException("El carrito está vacío");
         }
 
-        // Crear pedido
+        // 2️⃣ Restar stock (ANTES de crear el pedido)
+        carrito.getItems().forEach(item -> {
+            var producto = item.getProducto();
+
+            if (producto.getStock() < item.getCantidad()) {
+                throw new RuntimeException(
+                        "Stock insuficiente para " + producto.getNombre()
+                );
+            }
+
+            producto.setStock(producto.getStock() - item.getCantidad());
+            productoRepository.save(producto);
+        });
+
+        // 3️⃣ Crear pedido
         Pedido pedido = Pedido.builder()
                 .usuario(carrito.getUsuario())
                 .total(carrito.getTotal())
-                .estado(Pedido.EstadoPedido.pendiente)
+                .estado(Pedido.EstadoPedido.pendiente) // 👈 CORRECTO
                 .build();
 
-        // Convertir items del carrito en items del pedido
-        List<DetallePedido> detalles = carrito.getItems().stream().map(item -> {
-            return DetallePedido.builder()
-                    .producto(item.getProducto())
-                    .cantidad(item.getCantidad())
-                    .precioUnitario(item.getProducto().getPrecio())
-                    .pedido(pedido)
-                    .build();
-        }).collect(Collectors.toList());
+        // 4️⃣ Crear detalles del pedido
+        List<DetallePedido> detalles = carrito.getItems().stream()
+                .map(item -> DetallePedido.builder()
+                        .producto(item.getProducto())
+                        .cantidad(item.getCantidad())
+                        .precioUnitario(item.getProducto().getPrecio())
+                        .pedido(pedido)
+                        .build())
+                .toList();
 
         pedido.setItems(detalles);
 
-        // Guardar pedido
+        // 5️⃣ Guardar pedido
         Pedido pedidoGuardado = pedidoRepository.save(pedido);
 
-        // Vaciar carrito
+        // 6️⃣ Vaciar carrito
         carrito.getItems().clear();
         carrito.setTotal(0.0);
         carritoRepository.save(carrito);
@@ -63,5 +80,5 @@ public class PedidoService {
     public List<Pedido> obtenerPedidosPorUsuario(Long usuarioId) {
         return pedidoRepository.findByUsuarioId(usuarioId);
     }
-
 }
+
